--- a/article1.html
+++ b/article1.html
@@ -19,7 +19,7 @@
           <img src="pics/big-bang.jpg" alt="Visual of particle collision" class="hero-image" />
           <div class="hero-overlay">
             <p class="breadcrumb">topics › physics › cosmology</p>
-            <h1>we dont know what we don't know</h1>
+            <h1>How to know what we don't know</h1>
           </div>
         </div>
       </section>
@@ -27,9 +27,10 @@
       <!-- MAIN CONTENT -->
       <main class="main-article">
         <h2>We dont know what questions ask the universe</h2>
-        Si fem servir la imaginació per pensar com va ser la creació de l'univers, acabarem donant voltes al moment on es va crear i no existia res. La nostra ment va directa a la pregunta, quin va ser l'inici? Què hi havia a l'inici del temps? Ha d'haver un moment on tot comences. Però és una concepció del esser humà que com concebeix que la vida te un inici i un fi vol extrapolar la seva experiencia a la vida de l'univers. És una pregunta intel·ligent pensar com va ser l'inici de l'univers? Perquè ha de tenir un inici? Costa pensar que alguna cosa no tingui un inici i un fi. Que no sigui finit. Pot ser l'univers infinit, no tenir un final? La nostra ment no pot arribar a imaginar que hi hagi quelcom infinit, que no tingui inici o no tingu final. La nostra concepcio de realitat concibeix que tot te un inici i un fi. 
-        Tot això hem fa pensar que plasmem la nostra experiència, com nosaltres som essers humans finits, tenim un inici i un fi, volem poder aplicar-ho a tots els elements de l'univers, pero aquesta pregunta només ha surgit per la nostra constitució. Això hem fa reflexionar a que hi ha moltes preguntes que no ens estem fent de l'univers. Que l'univers està aquí fora i no li estem preguntant el que cal perquè estem influenciats amb la nostra realitat infimisimament  peculiar. Però com podem arribar a fer-li preguntes que no sabem ?
-      </main>
+        To discover more about the universe, we first need to know what we’re looking for. Asking the right question often solves more than half the problem. We need to know what questions we're asking of the universe. For years, science has been asking: what was there at the beginning of the universe? But is this question rooted in a human conception, that because we experience life as having a beginning and an end, we try to project that same structure onto the universe? This makes me think that we imprint our own experience onto what we study. As finite beings, with a clear start and end, we naturally want to apply that same framework to everything, including the universe. But maybe that question only exists because of how we are built.
+        It makes me reflect on how there are probably many questions we're not asking about the universe. The universe is out there, but we’re not asking the right things, because we're shaped by our own extremely narrow and particular reality.
+        But then, how can we even begin to ask questions that we don’t yet know how to ask?
+              </main>
     
     </body>
     </html>
