--- a/self.html
+++ b/self.html
@@ -40,7 +40,7 @@
                 <div class="book-content">
                     <h4>BOOKS</h4>
                     <h3>The Universe in a Nutshell</h3>
-                    <p>Timeless lessons on wealth, greed, and happiness.</p>
+                    <p>Stephen Hawking.</p>
                 </div>
             </article>
         
@@ -50,8 +50,8 @@
                 </a>
                 <div class="book-content">
                     <h4>TOPICS</h4>
-                    <h3>Big Bang</h3>
-                    <p>What happens to the day without a yesterday. </p>
+                    <h3>Questions of the universe</h3>
+                    <p>How to know what we don't know.</p>
                 </div>
             </article>
         </div>
