--- a/self.html
+++ b/self.html
@@ -34,7 +34,7 @@
             <!--<a href="#">PODCASTS</a> -->
             <a href="#">TOPICS</a>
         </div>
-        This section contains my personal notes on <sep class="keyword">books</sep> and <sep class="keyword">topics</sep> . It’s a collection of<sep class="keyword">powerfull ideas</sep>  that resonate with me, captured in simple <sep class="keyword">mantras</sep> that make them unforgettable. In the future, I may also add personal essays to share my own perspectives. (Still not ready). <div class="book-grid">
+        This section contains my personal notes on <sep class="keyword">books</sep> and <sep class="keyword">topics</sep> . It’s a collection of<sep class="keyword">powerfull ideas</sep>  that resonate with me, captured in simple <sep class="keyword">mantras</sep> that make them unforgettable.  <div class="book-grid">
             <article class="book-card">
                 <img src="pics/universe.jpg" alt="The Psychology of Money" class="book-image">
                 <div class="book-content">
@@ -52,6 +52,16 @@
                     <h4>TOPICS</h4>
                     <h3>Questions of the universe</h3>
                     <p>How to know what we don't know.</p>
+                </div>
+            </article>
+            <article class="reflection-card">
+                <a href="article2.html">
+                <img src="pics/big-bang.jpg" alt="" class="reflection-image">
+                </a>
+                <div class="book-content">
+                    <h4>TOPICS</h4>
+                    <h3>The expanding universe</h3>
+                    <p></p>
                 </div>
             </article>
         </div>
