--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         </div>
         
         <section class="about-me">
-            <p>Hello! I'm Alicia, a 23-year-old woman from Lleida. I'm a Mathematician working as a Generative AI Engineer, passionate about #tech, #productivity, #personal-growth, and always seeking to expand my skill set in absolutely any area—from fitness and health to finances and politics. I'm obsessed with planning and always thinking about what’s next. Waiting for my oportunity to move to London. The mantra that I live by is <i>be 1% better every day.</i></p>
+            <p>Hello! I'm Alicia, a 24-year-old woman from Lleida. I'm a Mathematician in love with physics. I’m passionate about reading, learning, thinking, reflecting, and (sometimes writing) about science. </p>
             <p>I created this website not (only) to focus on myself, but to share some ideas that I feel are worth remembering, from books I’ve read to interesting people I’ve listened to. My goal is to create a space that reflects a bit of who I am and what I connect with. No AI here, just pure motivation and passion. Hoping to inspire others.</p>
             <p>Feel free to reach out if you'd like to collaborate or you simply share the same interests!</p>
-
         </section>
 
     </div class="profile-container">
